// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 2px;
  font-size: 22px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
}

.c0 svg {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  -webkit-transform: translate(50%,50%);
  -ms-transform: translate(50%,50%);
  transform: translate(50%,50%);
}

@media (min-width:767px) {
  .c0 {
    width: 58px;
    height: 58px;
    font-size: 26px;
  }
}

<button
  className="c0"
/>
`;

exports[`IsVotedButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 2px;
  font-size: 22px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  color: rgb(255,255,255);
}

.c0 svg {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  -webkit-transform: translate(50%,50%);
  -ms-transform: translate(50%,50%);
  transform: translate(50%,50%);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    width: 58px;
    height: 58px;
    font-size: 26px;
  }
}

<button
  className="sc-1gs43wt-0 c0"
/>
`;

exports[`VoteButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
  height: 48px;
  border-width: 2px;
  font-size: 22px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  background-color: rgb(255,255,255);
}

.c0 svg {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  -webkit-transform: translate(50%,50%);
  -ms-transform: translate(50%,50%);
  transform: translate(50%,50%);
}

.c0:focus,
.c0:active {
  color: rgb(255,255,255);
}

.c0:focus svg,
.c0:active svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    width: 58px;
    height: 58px;
    font-size: 26px;
  }
}

<button
  className="sc-1gs43wt-0 c0"
/>
`;
